# Gangoos-coder

./: .env.example  .gitattributes  .gitignore  .goosehints  AGENTS.md  BUILDING_LINUX.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HANDOFF.md  I18N.md  Justfile  NOTICE  OPEN_SOURCE_LAUNCH_CHECKLIST.md  README.md  RELEASE.md  RELEASE_CHECKLIST.md  deny.toml  docker-compose.privileged.yml  docker-compose.remote.yml  docker-compose.yml  download_cli.ps1  download_cli.sh  flake.nix  pytest.ini  sample.jsonl
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/: CODEOWNERS  FUNDING.yml  copilot-instructions.md  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: qa.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  submit-recipe.yml
.github/recipes/: code-review.yaml
.github/scripts/: pr-review-mcp.py
.github/workflows/: ci.yml
.husky/: pre-commit
.vm-state/: vm1-gangus-coder.json  vm2-gangus-llm.json
crates/goose/: Cargo.toml
crates/goose-acp/: Cargo.toml  acp-meta.json  acp-schema.json
crates/goose-acp-macros/: Cargo.toml
crates/goose-acp-macros/src/: lib.rs
crates/goose-acp/src/: custom_requests.rs  fs.rs  lib.rs  server.rs  tools.rs  transport.rs
crates/goose-acp/tests/: custom_requests_test.rs  provider_test.rs  server_test.rs
crates/goose-acp/tests/common_tests/: mod.rs
crates/goose-acp/tests/fixtures/: mod.rs  provider.rs  server.rs
crates/goose-acp/tests/test_data/: openai_builtin_execute.txt  openai_fs_read_tool_call.txt  openai_fs_read_tool_result.txt  openai_fs_write_tool_call.txt  openai_fs_write_tool_result.txt  openai_image_attachment.txt  openai_shell_tool_call.txt  openai_shell_tool_result.txt
crates/goose-cli/: Cargo.toml
crates/goose-mcp/: Cargo.toml
crates/goose-server/: Cargo.toml
crates/goose-test-support/: Cargo.toml
crates/goose-test-support/src/: lib.rs  mcp.rs  otel.rs  session.rs
dataset/: 00_START_HERE.md  FINETUNE_README.md  FINETUNING_GUIDE.md  INDEX.md  Modelfile.template  README.md  execution_traces.jsonl  execution_traces_v2.jsonl  finetune_pipeline.py  gangoos_architecture.jsonl  gangoos_coder_dataset.jsonl  generate_dataset.py  prepare_dataset.sh  quick_start.sh  tool_call_traces.jsonl  validate_dataset.py
deploy/: certbot-entrypoint.sh  deploy_both.sh  docker-compose.production.yml  docker-compose.vm2.yml  nginx.conf  setup_ollama.sh  setup_vm1_llm.sh  setup_vm2_orchestrator.sh  test_deployment.sh
docs/: JULES_MEGA_PROMPT.md  publish-npm-workflow-changes.md
docs/project/: 01_AUDIT_ERRORS_AND_BLOCKERS.md  02_ENGINEERING_RULES_AND_TEST_GATES.md  03_PHASED_COPY_TO_ORG_POLICY.md  04_PHASE_1_CI_AND_PACKAGING_PLAN.md  (+9 more)
knowledge/: hacker_laws.md
llm/: Modelfile  SYSTEM_PROMPT.md  client.py  config.yaml  setup.sh
mcp-server/: .gitignore  .gitleaks.toml  Dockerfile  README.md  asgi_router.py  audit.py  auth.py  clients.py  codeact_agent.py  config.py  config_v2.py  metrics.py  policy.py  rate_limiter.py  registry.py  requirements.txt  rest_gateway.py  server.py  server_armored.py  server_v2.py  telegram_bot.py
mojo-battle-generator/: .gitignore  README.md  requirements.txt
oidc-proxy/: README.md  anthropic-oidc-proxy.json  package.json  wrangler.toml
scripts/: build-windows.ps1  pre-release.sh  test_providers_code_exec.sh
ui/: .npmrc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
(+566 files in other folders)
